--- a/inner-page.html
+++ b/inner-page.html
@@ -41,7 +41,7 @@
                                 <div class="site-navigation__catalog-list">
                                     <p class="site-navigation__catalog-box">
                                         <a class="site-navigation__catalog-item" href="#">Виртуальная реальность</a>
-                                        <a class="site-navigation__catalog-item" href="inner-page.html">Моноподы для селфи</a>
+                                        <a class="site-navigation__catalog-item site-navigation__current-item" >Моноподы для селфи</a>
                                         <a class="site-navigation__catalog-item" href="#">Экшн-камеры</a>
                                     </p>
                                     <p class="site-navigation__catalog-box">
