--- a/index.html
+++ b/index.html
@@ -198,33 +198,33 @@
                     <h2 class="visually-hidden">Сервисы</h2>
                     <div class="services-column">
                         <ul class="services-list">
-                            <li class="service-item service-item-current">
-                                <a class="button services-button" href="#service-delivery">
+                            <li class="service-item">
+                                <a class="button services-button services-link" href="#">
                                     <span class="services-button-content">Доставка</span>
                                 </a>
                             </li>
-                            <li class="service-item">
-                                <a class="button services-button" href="#service-warranty">
+                            <li class="service-item service-item-current">
+                                <a class="button services-button services-link" href="#">
                                     <span class="services-button-content">Гарантия</span>
                                 </a>
                             </li>
                             <li class="service-item">
-                                <a class="button services-button" href="#service-credit">
+                                <a class="button services-button services-link" href="#">
                                     <span class="services-button-content">Кредит</span>
                                 </a>
                             </li>
                         </ul>
                         <div class="services-box">
-                            <section class="service delivery" id="service-delivery">
+                            <section class="service-point service-point-delivery">
                                 <h3 class="delivery-title">Доставка</h3>
                                 <p class="delivery-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
                             </section>
-                            <section class="service warranty" id="service-warranty">
+                            <section class="service-point service-point-warranty description-active">
                                 <h3 class="warranty-title">Гарантия</h3>
                                 <p class="warranty-text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. <br> 
                                     Товар, не дом, конечно же.</p>
                             </section>
-                            <section class="service credit" id="service-credit">
+                            <section class="service-point service-point-credit">
                                 <h3 class="credit-title">Кредит</h3>
                                 <p class="credit-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
                             </section>
@@ -374,17 +374,20 @@
                 </p>
                 <button class="button submit" type="submit"><span>Отправить</span></button>
             </form>
-            <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
+            <button class="modal-close modal-write-us-close" type="button"><span class="visually-hidden">Закрыть</span></button>
         </section>
-        <section class="modal modal-map ">
+        <section class="modal modal-map">
             <h2 class="visually-hidden">Как до нас добраться</h2>
-            <p class="modal-map-box">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.6601710811333!2d37.52778005465337!3d55.6870379175277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2skz!4v1572548552860!5m2!1sru!2skz" width="960" height="559" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <p class="modal-map-box" href="#">
                 <img src="images/map-big.jpg" width="960" height="559" alt="г. Москва, ул. Строителей, 15">
             </p>
-            <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
+            <button class="modal-close modal-map-close" type="button"><span class="visually-hidden">Закрыть</span></button>
         </section>
         <div class="modal-overlay"></div>
         <script src="scripts/popup.js"></script>
-        <!-- <script src="scripts/map.js"></script> -->
+        <script src="scripts/write-area.js"></script>
+        <script src="scripts/map.js"></script>
+        <script src="scripts/services.js"></script>
     </body>
 </html>
