--- a/inner-page.html
+++ b/inner-page.html
@@ -15,8 +15,8 @@
                     <div class="user-tools">
                         <div class="user-tools-item user-tools-box" >
                             <form class="user-tools-form" action="https://echo.htmlacademy.ru" method="POST">
-                                <input class="user-tools-seach" type="seach" name="seach" id="user-seach" placeholder="Поиск по сайту">
-                                <label for="user-seach"><span class="visually-hidden">Поиск по сайту</span></label>
+                                <input class="user-tools-search" type="search" name="search" id="user-search" placeholder="Поиск по сайту">
+                                <label for="user-search"><span class="visually-hidden">Поиск по сайту</span></label>
                                 <button class="user-tools-submit" type="submit">Найти</button>
                             </form>
                         </div>
@@ -45,7 +45,7 @@
                                         <a class="site-navigation__catalog-item" href="#">Экшн-камеры</a>
                                     </p>
                                     <p class="site-navigation__catalog-box">
-                                        <a class="site-navigation__catalog-item"href="#">Фитнес-браслеты</a>
+                                        <a class="site-navigation__catalog-item" href="#">Фитнес-браслеты</a>
                                         <a class="site-navigation__catalog-item" href="#">Умные часы</a>
                                     </p>
                                     <p class="site-navigation__catalog-box">
