--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <div class="user-tools">
                         <div class="user-tools-item user-tools-box" >
                             <form class="user-tools-form" action="https://echo.htmlacademy.ru" method="POST">
-                                <input class="user-tools-seach" type="seach" name="seach" id="user-seach" placeholder="Поиск по сайту">
-                                <label for="user-seach"><span class="visually-hidden">Поиск по сайту</span></label>
+                                <input class="user-tools-search" type="search" name="search" id="user-search" placeholder="Поиск по сайту">
+                                <label for="user-search"><span class="visually-hidden">Поиск по сайту</span></label>
                                 <button class="user-tools-submit" type="submit">Найти</button>
                             </form>
                         </div>
@@ -378,8 +378,8 @@
         </section>
         <section class="modal modal-map">
             <h2 class="visually-hidden">Как до нас добраться</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.6601710811333!2d37.52778005465337!3d55.6870379175277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2skz!4v1572548552860!5m2!1sru!2skz" width="960" height="559" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-            <p class="modal-map-box" href="#">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2674.6601710811333!2d37.52778005465337!3d55.6870379175277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2skz!4v1572548552860!5m2!1sru!2skz" width="960" height="559" style="border:0;"></iframe>
+            <p class="modal-map-box">
                 <img src="images/map-big.jpg" width="960" height="559" alt="г. Москва, ул. Строителей, 15">
             </p>
             <button class="modal-close modal-map-close" type="button"><span class="visually-hidden">Закрыть</span></button>
