Завершает нормальное отображение сайта во всех браузерах

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <header class="main-header">
             <div class="container">
                 <div class="main-header-wrapper">
-                    <a class="main-header-logo">Device</a>
+                    <a class="main-header-logo">
+                        <img class="main-header-logo-image" src="images/logo.png" width="164" height="36" alt="Логотип интернет магазина «DEVCE»">
+                    </a>
                     <div class="user-tools">
                         <div class="user-tools-item user-tools-box" >
                             <form class="user-tools-form" action="https://echo.htmlacademy.ru" method="POST">
@@ -288,7 +290,9 @@
         <footer class="main-footer">
             <div class="container">
                 <div class="footer-top">
-                    <a class="footer-logo">Device</a>
+                    <a class="footer-logo">
+                        <img class="footer-logo-image" src="images/logo-footer.png" width="163" height="36" alt="Логотип интернет магазина «DEVCE»">
+                    </a>
                     <ul class="footer-user-menu">
                         <li><a class="login-link" href="login.html">Войти</a></li>
                         <li><a href="compare.html">Сравнить</a></li>
@@ -324,7 +328,7 @@
                     </ul>
                     <p class="copyright">
                         <a href="https://htmlacademy.ru">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewbox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
                             <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
                             </svg>
                         </a>
@@ -385,9 +389,6 @@
             <button class="modal-close modal-map-close" type="button"><span class="visually-hidden">Закрыть</span></button>
         </section>
         <div class="modal-overlay"></div>
-        <script src="scripts/popup.js"></script>
-        <script src="scripts/write-area.js"></script>
-        <script src="scripts/map.js"></script>
-        <script src="scripts/services.js"></script>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
